--- a/src/templates/6-0-contacts.pug
+++ b/src/templates/6-0-contacts.pug
@@ -6,23 +6,25 @@ title: Contact us
 extends layouts/_layout
 block content
 
-	.barba-container(data-namespace="contacts")
+	
 		.block
+			.logo-wrap.bg-brend
+				a(href="/home.html")
+					+icon('logo')
 			.block-grid
 				.aside.bg-brend
-					.aside-content-wrap.js-stick-parent
-						.aside-content.js-stick
-							h1 Contact us
-							h4 address
-							p.text-middle 210035, Smolenskaya 5-1, shopping center "Europe" office 103. Vitebsk, Belarus
-							a(href="#") Open road map
-							h4 Contact
-							.contacts-wrap
-								a.link(href="tel:+375(29)6336069") +375 (29) 633 60 69
-								a.link(href="tel:+375(33)6006069") +375 (33) 600 60 69
-								a.link(href="mailto:info@inmodels.by") info@inmodels.by
-							a(href="/7-0-Become-model.html").bttn.normal
-								span Become a model
+					.aside-content
+						h1 Contact us
+						h4 address
+						p.text-middle 210035, Smolenskaya 5-1, shopping center "Europe" office 103. Vitebsk, Belarus
+						a(href="#") Open road map
+						h4 Contact
+						.contacts-wrap
+							a.link(href="tel:+375(29)6336069") +375 (29) 633 60 69
+							a.link(href="tel:+375(33)6006069") +375 (33) 600 60 69
+							a.link(href="mailto:info@inmodels.by") info@inmodels.by
+						a(href="/7-0-Become-model.html").bttn.normal
+							span Become a model
 				.main.bg-white
 					.main-content
 						.form-block
