--- a/src/templates/partials/_header.pug
+++ b/src/templates/partials/_header.pug
@@ -6,8 +6,8 @@
 			span.navigation-burger__item
 			span.navigation-burger__item
 		a.navigation-lang(href="#") рус
-		a(href="/home.html").navigation-logo
-			+icon('logo')
+		//- a(href="/home.html").navigation-logo
+		//- 	+icon('logo')
 		a.navigation-search(href="#search-block")
 			+icon('loupe')
 		//- .navigation-link.header-links
