--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -9,7 +9,8 @@
 			//- 	.navigation-link-wrap
 			//- 		a.navigation-link__item.modal-link(href="/6-0-contacts.html") Business request
 			//- 		a.navigation-link__item.modal-link(href="/7-0-Become-model.html") Become a model
-
+			a(href="/home.html").link-logo
+				+icon('logo')
 			.pages-links
 				ul
 					li.pages-links__item
