--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -1,9 +1,12 @@
 .modals
 	visibility: hidden
 	pointer-events: none
-	// position: absolute
-	// top: -1000px
-	// left: -1000px
+	position: fixed
+	width: 0px
+	height: 0px
+	top: -1000px
+	left: -1000px
+	z-index: 4
 
 .modal	
 	&-layout
@@ -47,6 +50,10 @@
 					transform: rotate(-90deg) translateY(0)
 					opacity: 1
 					transition: transform .3s .15s, opacity .3s .15s
+				.link-logo
+					transform: none
+					opacity: 1
+					transition: transform .3s .25s, opacity .3s .25s
 				@for $i from 1 to 7
 					.pages-links__item:nth-child(n+#{$i})
 						opacity: 1
@@ -104,44 +111,25 @@
 			height: 100%
 			position: relative
 			z-index: 2
-			// display: flex
-			// flex-direction: column
-			// justify-content: space-between
-			// +vertical
 			transition: background-color .3s 0s
-			// +vertical
-			// padding-top: 53px
-			// padding-bottom: 45px
 			.pages-links
 				padding-top: 130px
 				padding-left: 30px
+				padding-bottom: 50px
+				+r(400)
+					padding-top: 90px
 				ul
 					text-align: left
 					li
 						margin-bottom: 40px
 						&:last-child
 							margin-bottom: 50px
-
-				// display: flex
-				// justify-content: space-between
-				// display: inline-block
-				// vertical-align: middle
-				// width: 100%
-
-				// max-width: 1200px
-				// margin: auto
-				// padding: 0 27px
-				// padding-bottom: 50px
-				// &:hover 
-				// 	.pages-links__item
-				// 		span
-				// 			opacity: .3
-				// 		&:hover
-				// 			span
-				// 				opacity: 1
+						+r(400)
+							margin-bottom: 20px
+							&:last-child
+								margin-bottom: 35px
 				&__item
 					display: block
-					
 					font-weight: 200
 					color: $color
 					text-transform: uppercase
@@ -149,100 +137,17 @@
 					z-index: 1
 					transform: translateY(20px)
 					transition: opacity .1s .0s, transform .0s .1s, font-size .3s
-					// &::before
-					// 	content: ''
-					// 	display: block
-					// 	height: 1px
-					// 	width: 50px
-					// 	background-color: $color
-					// 	margin-left: 4px
-					// 	margin-bottom: 35px
-					// 	transform: scaleX(0)
-					// 	transform-origin: 0
-					// 	transition: transform .2s 0s
-					// +r(1281)
-					// 	font-size: 40px
 					span
 						font-size: 50px
 						color: $color
 						transition: opacity .35s .1s
-					// .hov-decor
-					// 	position: absolute
-					// 	height: 100vh
-					// 	width: 100%
-					// 	max-width: 400px
-					// 	top: 0
-					// 	pointer-events: none
-					// 	z-index: -1
-					// 	opacity: 0
-					// 	transition-delay: .25s
-					// 	transition: opacity .35s
-					// 	+r(1281)
-					// 		max-width: 300px
-					// 		&-inner
-					// 			right: 20px
-					// 	&-inner
-					// 		position: absolute
-					// 		top: 0
-					// 		right: 40px
-					// 		height: 100%
-					// 		width: 100%
-					// 		overflow: hidden
-					// 		&::after
-					// 			content: ''
-					// 			display: block
-					// 			width: 100%
-					// 			height: 100%
-					// 			background-color: $bg-color
-					// 			position: absolute
-					// 			top: 0
-					// 			left: 0
-					// 			transform: none
-					// 			transform-origin: 0 0
-					// 			transition: transform .3s
-					// 			z-index: 0
-					// 		img
-					// 			height: 100%
-					// 			width: auto
-					// 			min-width: 100%
-					// 			max-width: none
-					// 			position: absolute
-					// 			top: 0
-					// 			left: 0
-					// 			opacity: 0
-					// 			transform: translateX(-20px)
-					// 			transition: transform .3s 0s, opacity .2s .1s
-				
-					// &:hover
-					// 	&::before
-					// 		transform: none
-					// 		transition: transform .4s .1s
-					// 	& .hov-decor
-					// 		opacity: 1
-					// 		transition: opacity .1s 0s
-					// 		&-inner
-					// 			&::after
-					// 				transform: scaleX(0)
-					// 				// visibility: visible
-					// 				// opacity: 1
-					// 				// transition: transform .5s .1s, visibility 0s 0s, opacity .2s .1s
-					// 				transition: transform .4s
-					// 			img
-					// 				// transition: transform .5s .15s, opacity .2s .15s
-					// 				transition: transform .25s .1s, opacity .2s
-					// 				opacity: .1
-					// 				transform: none
-
-			
+						+r(400)
+							font-size: 34px
+					
 			.navigation-link
-				// position: absolute
-				// z-index: 2
 				width: 100%
 				text-align: center
 				&.quest-links
-					// left: 0
-					// top: 27px
-					// padding-top: 27px
 					opacity: 0
 					transform: translateY(-20px)
 					transition: transform .3s .1s, opacity .3s .1s
@@ -251,17 +156,12 @@
 						li
 							&:not(:last-child)
 								margin-bottom: 40px
+								+r(400)
+									margin-bottom: 20px
 							
 
 					.navigation-link__item
 						display: inline-block
-				// &.social-links
-				// 	// left: 0
-				// 	// bottom: 24px
-				// 	padding-bottom: 25px
-				// 	opacity: 0
-				// 	transform: translateY(20px)
-				// 	transition: transform .3s .1s, opacity .3s .1s
 			.link-dev
 				color: $disable-color
 				font-size: 12px
@@ -275,6 +175,16 @@
 				transform-origin: 100% 0
 				right: 50px
 				opacity: 0
+				transition: transform .3s .1s, opacity .3s .1s
+			.link-logo
+				display: block
+				height: 20px
+				width: 112px
+				position: absolute
+				top: 30px
+				right: 30px
+				opacity: 0
+				transform: translateX(20px)
 				transition: transform .3s .1s, opacity .3s .1s
 
 .pop-close
