--- a/src/templates/4-0-agency.pug
+++ b/src/templates/4-0-agency.pug
@@ -6,42 +6,34 @@ title: About Agency
 extends layouts/_layout
 block content
 
-	.barba-container(data-namespace="about")
 		.block.about
-			.block__bg
-			.block-content
-				.about-menu
-					ul.about-menu__list
-						li.about-menu__item
-							a.about-menu__link.active(href="/4-0-agency.html") about agency
-						li.about-menu__item
-							a.about-menu__link(href="/4-1-agency-models.html") for models
-						li.about-menu__item
-							a.about-menu__link(href="/4-2-partners.html") for partners
+			.logo-wrap.bg-brend
+				a(href="/home.html")
+					+icon('logo')
+			.block-content.bg-brend
+				
 				.about-content
 					.about-content__row
-						.about-content__cell.cell-title
-							h1.rellax(data-rellax-speed="-2") About agency
-							img.rellax(data-rellax-speed="2", src="img/about-agency.jpg", alt="about-agency")
-						.about-content__cell.cell-text_r
-							.about-content__text
-								p.text-big INMODELS — mother model agency, opened in 2015 by two models — Inna Smirnova and Natalia Litvinenko
-								p.text 
-									strong The agency is engaged in the search for models, the development of their international careers, and works with girls from all the cities of Belarus.
-								p.text.sub-title.sub-title--offset The beginning
-								p.text.text.line-decor.line_l Before opening the agency, we worked for a long time models in Italy, France, USA, China and other countries. During their work they learned about the problems and difficulties encountered by the models and learned to solve them.
-					blockquote.text-big.about-content__full-text We understood how the parent agency should work for the successful development of the model. We wanted to change the approach of the work of the parent agencies, pay special attention to friendly relations with both models and with foreign agencies.
+						h1 About agency
+						img(src="img/about-agency.jpg", alt="about-agency")
+						.about-content__text
+							p.text-big INMODELS — mother model agency, opened in 2015 by two models — Inna Smirnova and Natalia Litvinenko
+							p.text 
+								strong The agency is engaged in the search for models, the development of their international careers, and works with girls from all the cities of Belarus.
+						p.text.sub-title.sub-title--offset The beginning
+						p.text.text Before opening the agency, we worked for a long time models in Italy, France, USA, China and other countries. During their work they learned about the problems and difficulties encountered by the models and learned to solve them.
+					blockquote.text-big We understood how the parent agency should work for the successful development of the model. We wanted to change the approach of the work of the parent agencies, pay special attention to friendly relations with both models and with foreign agencies.
 					.about-content__row
-						.about-content__cell.cell-text_l
-							.about-content__text.rellax(data-rellax-speed="-1", data-rellax-zindex="3")
-								p.text.text.line-decor.line_r
-									strong In 2015 we decided to open our agency INMODELS. At this time, Tatiana Sokolovskaya joined our team.
-								p.text She was the most popular Internet blog about Belarusian models and worked as a model agent. We were united by interest and love of fashion.
-						.about-content__cell.cell-img_r.rellax(data-rellax-speed="1", data-rellax-zindex="1")
-							img(src="img/about-2.jpg", alt="about about")
-								
-				.link-footer
-					.link-footer-inner
-						a.link-big.active(href="/4-0-agency.html") about agency
-						a.link-big(href="/4-1-agency-models.html") for models
-						a.link-big(href="/4-2-partners.html") for partners
+						img(src="img/about-2.jpg", alt="about about")
+						.about-content__text
+							p.text.text
+								strong In 2015 we decided to open our agency INMODELS. At this time, Tatiana Sokolovskaya joined our team.
+						p.text She was the most popular Internet blog about Belarusian models and worked as a model agent. We were united by interest and love of fashion.	
+					.link-footer
+						ul.link-footer-inner
+							li.link-footer__item
+								a.link-big.active(href="/4-0-agency.html") about agency
+							li.link-footer__item
+								a.link-big(href="/4-1-agency-models.html") for models
+							li.link-footer__item
+								a.link-big(href="/4-2-partners.html") for partners
