inner page, news page, gallery\model

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -116,7 +116,7 @@ blockquote
 		cursor: pointer
 		transition: color .3s
 		// color: rgba(#000000, .7)
-		background-color: rgba(#000000, .4)
+		background-color: rgba(#000000, 1)
 		font-size: 40px
 	.play-button-icon
 		display: block
