--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -1,6 +1,8 @@
 .form-block
 	width: 100%
-	// max-width: 600px
+	form
+		padding-top: 60px
+		width: 100%
 	&__title
 		width: 100%
 		margin-bottom: 30px
@@ -131,8 +133,8 @@
 					transition: font-size .15s 0s, transform .15s 0s, opacity .15s 0s ease-in, visibility 0s .2s
 		&.input-textarea
 			label
-				top: auto
-				bottom: 12px
+				top: 19px
+				bottom: auto
 		&.c2
 			width: 45.83%
 			+r(600)
