--- a/src/templates/4-2-partners.pug
+++ b/src/templates/4-2-partners.pug
@@ -5,7 +5,7 @@ title: For Partners
 ---
 extends layouts/_layout
 block content
-
+	.barba-container(data-namespace="about")
 		.block.about
 			.logo-wrap.bg-brend
 				a(href="/home.html")
