--- a/src/templates/6-0-contacts.pug
+++ b/src/templates/6-0-contacts.pug
@@ -6,7 +6,7 @@ title: Contact us
 extends layouts/_layout
 block content
 
-	
+	.barba-container(data-namespace="contacts")
 		.block
 			.logo-wrap.bg-brend
 				a(href="/home.html")
