--- a/src/templates/layouts/_layout.pug
+++ b/src/templates/layouts/_layout.pug
@@ -16,7 +16,8 @@ html
 						block header
 							include ../partials/_header
 					main.page__content
-						block content
+						#barba-wrapper
+							block content
 					footer.page__footer
 						include ../partials/_footer
 		//END out
