--- a/src/sass/_layouts.sass
+++ b/src/sass/_layouts.sass
@@ -86,7 +86,6 @@
 			width: 100%
 			padding-right: 40px
 			padding-left: 40px
-			padding-top: 60px
 			padding-bottom: 40px
 			text-align: left
 			&-content
@@ -97,22 +96,15 @@
 		padding-bottom: 1px
 		width: 100%
 		height: 100%
-		display: flex
-		align-items: stretch
+		display: block
 		.aside
-			width: 25%
+			width: 100%
 			height: 100%
-			padding-left: 65px
-			text-align: right
-			+r(1200)
-				width: 30%
+			padding: 0 40px
 		.main
-			width: 75%
-			height: 100%
-			padding-left: 20px
-			padding-top: 40px
-			+r(1200)
-				width: 70%
+			width: 100%
+			height: 100vh
+			padding: 40px
 
 .bg-white
 	background-color: $bg-color
