--- a/src/templates/3-0-inner.pug
+++ b/src/templates/3-0-inner.pug
@@ -7,38 +7,42 @@ extends layouts/_layout
 block content
 
 	.barba-container(data-namespace="inner-model")
-		.block.-fullpage
+		.block
+			.logo-wrap.bg-brend
+				a(href="/home.html")
+					+icon('logo')
 			.block-inner
 				.aside.bg-brend
 					.inner-title
 						.inner-title-wrap
 							h1 Anastasia Viartsiukhova
-					.inner-info
-						.inner-info-wrap
-							.inner-info__item
+					.swiper-container.inner-info
+						.swiper-wrapper
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Height
 								.inner-info__desc.text 178
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Bust
 								.inner-info__desc.text 80
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Waist
 								.inner-info__desc.text 60
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Hips
 								.inner-info__desc.text 88
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Shoe size
 								.inner-info__desc.text 40
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Hair color
 								.inner-info__desc.text brown
-							.inner-info__item
+							.swiper-slide.inner-info__item
 								.inner-info__title.sub-title Eye color
 								.inner-info__desc.text green-gray
-						.inner-info__link
-							a(href="").link-menu Instagram
-							a(href="").link-menu Facebook
+						.swiper-scrollbar.inner-info-bar
+					.inner-info__link
+						a(href="").link-menu Instagram
+						a(href="").link-menu Facebook
 				.main.bg-dark
 					.swiper-container.inner-slider
 						.swiper-wrapper
@@ -76,7 +80,7 @@ block content
 							.swiper-slide.swiper-slide-social(data-link="social-bttn")
 								+share-block
 						.swiper-pagination
-						.swiper-scrollbar
+						.swiper-scrollbar.inner-slider-bar
 						.swiper-navigation
 							button.portfolio-bttn.slide-target.active(data-slide="swiper-slide-portfolio") portfolio
 							button.editorial-bttn.slide-target(data-slide="swiper-slide-editorial") editorial
