--- a/src/templates/5-1-gallery-news.pug
+++ b/src/templates/5-1-gallery-news.pug
@@ -8,10 +8,13 @@ block content
 
 	.barba-container(data-namespace="gallery-news")
 		.block.bg-brend.gallery-news
+			.logo-wrap.bg-brend
+				a(href="/home.html")
+					+icon('logo')
 			.block-grid
 				.aside
-					.aside-content-wrap.js-stick-parent
-						.aside-content.js-stick
+					.aside-content-wrap
+						.aside-content
 							.gallery-news-title
 								h1 Sasha Pronenko
 							.gallery-news-date 20 dec 2017
@@ -21,8 +24,6 @@ block content
 									a(href="#") Sasha Pronenko
 								p.text Designer: Sveta Pantelу
 								p.text Brand: POLOGEORGIS
-						.gallery-news-footer
-							a.link-big(href="/5-0-gallery.html") back to gallery
 				.main
 					.main-content
 						.gallery-news-content
@@ -33,4 +34,5 @@ block content
 								.play-button
 									.play-button-icon
 							+share-block
-
+					.gallery-news-footer
+						a.link-big(href="/5-0-gallery.html") back to gallery
